<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:id="@+id/constraintView">

    <Spinner
        android:id="@+id/jobTitle"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Job Title "
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/jobLocationET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/jobLocationET"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Job Location "
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/jobWageET"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/jobWageET"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Wage per Hour "
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/jobDurationET"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/jobDurationET"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Job Duration "
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/jobUrgency"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Spinner
        android:id="@+id/jobUrgency"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Job Urgency "
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/jobDescriptionET"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/jobDescriptionET"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Job Description "
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="#DDD"
        android:textColorHint="#BBB"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:layout_marginTop="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/postJobButton"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:text="Post Job"
        android:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="HardcodedText" />


    <!-- STYLING ELEMENTS -->
    <TextView
        android:id="@+id/quickCashLogo"
        android:layout_width="149dp"
        android:layout_height="63dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="604dp"
        android:fontFamily="@font/architects_daughter"
        android:text="Quick"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#08AA08"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/quickcashlogo2"
        android:layout_width="177dp"
        android:layout_height="86dp"
        android:layout_marginBottom="544dp"
        android:fontFamily="@font/architects_daughter"
        android:text="CA$H"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#08AA08"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>