...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/money_logo_frame" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="131dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="CASH IN"
        android:textAlignment="center"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Email..."
...
